Item371:    * fixed sidebar width for GeorgiaBlue where the sidebar is on the left    * the original fontsize of binary bonsai is simply too small    * added missing action to NatSkinStyleBrowser form    * fixed topicactions layout for non-dakar installations
git-svn-id: http://develop.twiki.org/svn/twiki/branches/DEVELOP/twikiplugins@6354 a00a5322-12db-0310-a70b-8735589c885e

--- a/NatSkin/pub/TWiki/NatSkin/GeorgiaBlueStyle.css
+++ b/NatSkin/pub/TWiki/NatSkin/GeorgiaBlueStyle.css
@@ -64,6 +64,11 @@ hr {
 .natMainFooter {
   padding:20px 20px 20px 10px;
 }
+.natSideBar, .natTopRight {
+  width:17em;
+  min-width:17em;
+  _width:17em; /* IE hack */
+}
 .natSideBar {
   padding-top:20px;
   padding-bottom:20px;
