--- a/NatSkin/pub/TWiki/NatSkin/KubrickStyle.css
+++ b/NatSkin/pub/TWiki/NatSkin/KubrickStyle.css
@@ -31,7 +31,7 @@ hr {
   border: 1px solid #959596;
   text-align: left;
   border: 1px solid #959596;
-  font-size: 62.5%; 
+  font-size: 65.5%;
   font-family: 'Lucida Grande', 'Trebuchet MS', Verdana, Arial, Sans-Serif;
 }
 .natSideBar,
